# TG

./: .gitignore  airfoil.py  finite_element_method.py  generate_airfoils.py  main.py  panel_method.py  pyproject.toml  sketch.ipynb
